--- a/bat/config
+++ b/bat/config
@@ -5,7 +5,7 @@
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
 # --theme="TwoDark"
---theme="Catppuccin-mocha"
+--theme="gruvbox-dark"
 --color=always
 --style="plain"
 
