--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1172,7 +1172,8 @@ background_opacity 0.975
 # include /home/rc/.config/kitty/themes/tokyonight_night.conf
 # include /home/rc/.config/kitty/themes/yoru.conf
 # include /home/rc/.config/kitty/themes/catppuccin-mocha.conf
-include /home/rc/.config/kitty/themes/gruvbox-dark.conf
+# include /home/rc/.config/kitty/themes/gruvbox-dark.conf
+include /home/rc/.config/kitty/themes/everforest.conf
 
 #: Advanced {{{
 
