working on everforest rofi

--- a/kitty/themes/everforest.conf
+++ b/kitty/themes/everforest.conf
@@ -3,7 +3,7 @@
 #
 # Eventually added actual light colors
 
-background  #2D353B
+background  #232A2E
 foreground  #D3C6AA
 
 cursor                #D3C6AA
