--- a/kitty/themes/everforest.conf
+++ b/kitty/themes/everforest.conf
@@ -4,49 +4,49 @@
 # Eventually added actual light colors
 
 background  #232A2E
-foreground  #D3C6AA
+foreground  #DCD2BC
 
-cursor                #D3C6AA
+cursor                #DCD2BC
 
-selection_foreground  #D3C6AA
-selection_background  #4D5960
+selection_foreground  #DCD2BC
+selection_background  #374145
 
 # black
 color0  #7A8478
 # light black
-color8  #859289
+color8  #56635F
 
 # red
 color1                #E67E80
 # light red
-color9                #E67E80
+color9                #5C3D4F
 
 # green
 color2                #A7C080
 # light green
-color10               #A7C080
+color10               #48584E
 
 # yellow
 color3                #DBBC7F
 # light yellow
-color11               #DBBC7F
+color11               #55544A
 
 # blue
 color4                #7FBBB3
 # light blue
-color12               #7FBBB3
+color12               #3F5865
 
 # magenta
 color5                #D699B6
 # light magenta
-color13               #D699B6
+color13               #63364c
 
 # cyan
 color6                #86C092
 # light cyan
-color14               #86C092
+color14               #48584E
 
-# light gray
+# gray
 color7                #9DA9A0
 # dark gray
-color15               #9DA9A0
+color15               #859289
