messing around wiht look and feel

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -81,8 +81,8 @@ image_source="/home/rc/.config/neofetch/custom-ascii/awesomewm/minimal.txt"
 # image_source="/home/rc/.config/neofetch/custom-ascii/awesomewm/green.txt"
 
 # Disable ascii logo
-# image_backend="off"
-image_backend="ascii"
+image_backend="off"
+# image_backend="ascii"
 
 # Text Colors
 # this order: 'title', '@', 'underline', 'subtitle', 'colon', 'info'
