trying to get shell to work better in non-interactive

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1028,6 +1028,7 @@ include /home/rc/.config/kitty/themes/everforest.conf
 
 #: Advanced {{{
 
+# shell .
 shell .
 
 #: The shell program to execute. The default value of . means to use
@@ -1138,6 +1139,7 @@ listen_on none
 #: is not supported.
 
 # env
+# env FZF_DEFAULT_OPTS="--header-first --reverse --border-label-pos=2 -i --no-scrollbar --border --height=~50% --prompt='󰍉 ' --pointer='' --marker='󰮺' --color='fg:black,fg+:-1,preview-fg:white,bg:-1,bg+:-1,preview-bg:-1,hl:cyan:dim,hl+:blue:underline,query:cyan,disabled:cyan:dim,prompt:cyan:dim,pointer:blue,marker:blue:dim,info:bright-white,spinner:yellow,border:white,separator:bright-black:dim,scrollbar:8:dim,header:cyan,label:blue:bold,preview-label:cyan'"
 
 #: Specify the environment variables to be set in all child processes.
 #: Using the name with an equal sign (e.g. env VAR=) will set it to
