--- a/kitty/themes/everforest.conf
+++ b/kitty/themes/everforest.conf
@@ -3,18 +3,21 @@
 #
 # Eventually added actual light colors
 
+background_opacity 0.90
+# background_blur 30
+
 background  #232A2E
 foreground  #DCD2BC
 
 cursor                #DCD2BC
 
-selection_foreground  #DCD2BC
-selection_background  #374145
+selection_foreground  #374145
+selection_background  #DCD2BC
 
 # black
-color0  #7A8478
+color0                #7A8478
 # light black
-color8  #56635F
+color8                #56635F
 
 # red
 color1                #E67E80
