--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,7 +11,8 @@
 # italic_font      Sauce Code Pro Italic Nerd Font Complete Mono
 # bold_italic_font Sauce Code Pro Bold Italic Nerd Font Complete Mono
 
-font_family        JetBrainsMono Nerd Font
+font_family        FiraCode Nerd Font
+# font_family        JetBrainsMono Nerd Font
 # font_family        Mononoki Nerd Font
 # font_family        SauceCodePro Nerd Font
 # font_family        Iosevka Nerd Font
