Added and Changed Cofigs
1. Added cosmic terminal themes
2. Added wezterm configuration
3. Tweaked StarSip config
4. Tweaked user-dirs config

--- a/starship.toml
+++ b/starship.toml
@@ -96,7 +96,7 @@ $directory
 $python$c$java$lua$rust\
 $character"""
 
-add_newline = false
+add_newline = true
 
 # command_timout = 500 # Default
 # command_timeout = 500
