more configs baby

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,7 +11,9 @@
 # italic_font      Sauce Code Pro Italic Nerd Font Complete Mono
 # bold_italic_font Sauce Code Pro Bold Italic Nerd Font Complete Mono
 
-font_family        FiraCode Nerd Font
+# font_family MonoLisa
+font_family FantasqueSansM Nerd Font
+# font_family        FiraCode Nerd Font
 # font_family        JetBrainsMono Nerd Font
 # font_family        Mononoki Nerd Font
 # font_family        SauceCodePro Nerd Font
@@ -34,7 +36,7 @@ bold_italic_font   auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 15.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -60,6 +62,8 @@ force_ltr no
 # symbol_map
 
 #: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
+
+# symbol_map U+E000-U+EE00, 
 
 #: Map the specified Unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
@@ -1020,7 +1024,8 @@ tab_bar_margin_color none
 #: }}}
 
 
-include /home/rc/.config/kitty/themes/everforest.conf
+# include /home/rc/.config/kitty/themes/everforest.conf
+include /home/rc/.config/kitty/themes/nord.conf
 # include /home/rc/.config/kitty/themes/tokyonight_night.conf
 # include /home/rc/.config/kitty/themes/yoru.conf
 # include /home/rc/.config/kitty/themes/catppuccin-mocha.conf
@@ -2074,6 +2079,7 @@ map opt+cmd+r        clear_terminal reset active
 #: Reload kitty.conf
 
 map kitty_mod+f5 load_config_file
+map super+f5 load_config_file
 map ctrl+cmd+,   load_config_file
 
 #::  Reload kitty.conf, applying any changes since the last time it
