--- a/kitty/themes/nord.conf
+++ b/kitty/themes/nord.conf
@@ -32,28 +32,37 @@ color11  #EFD49F
 
 # blue
 color4  #81A1C1
-color12 #88C0D0
+color12 #9CB3C9
 
 # magenta
 color5   #B48EAD
 color13  #BE9DB8
 
 # cyan
-color6   #88C0D0
+color6   #8FBCBB
 color14  #9FC6C5
 
 # white
-color7   #C0C8D8
-color15  #BBC3D4
+color7   #BBC3D4
+color15  #D8DEE9
 
 # The color for the border of the active window
-active_border_color #88C0D0
+active_border_color #EBCB8B
 
 # The color for the border of inactive windows
-inactive_border_color #60728A
+inactive_border_color #4C566A
 
 # Tab-bar colors
+# tab_bar_background #15181E
+# tab_bar_background #3B4252
+tab_bar_background none
+tab_bar_margin_color #191D24
+
 active_tab_foreground #191D24
-active_tab_background #81A1C1
-inactive_tab_foreground #81A1C1
+active_tab_background #B1C89D
+active_tab_font_style bold
+
+# inactive_tab_foreground #81A1C1
+inactive_tab_foreground #A3BE8C
 inactive_tab_background #2E3440
+inactive_tab_font_style normal
