--- a/oh-my-posh/rc.omp.toml
+++ b/oh-my-posh/rc.omp.toml
@@ -76,8 +76,8 @@ type = "prompt"
   foreground_templates = [
   "{{ if or (.Working.Changed) (.Staging.Changed) }}green{{ end }}",
   "{{ if and (gt .Ahead 0) (gt .Behind 0) }}lightRed{{ end }}",
-  "{{ if gt .Ahead 0 }}lightMagenta{{ end }}",
-  "{{ if gt .Behind 0 }}lightMagenta{{ end }}"
+  "{{ if gt .Ahead 0 }}yellow{{ end }}",
+  "{{ if gt .Behind 0 }}yellow{{ end }}"
    ]
   style = "plain"
   template = "<black>╴</>{{ .UpstreamIcon }} {{ .HEAD }}{{ if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}  {{ .Working.Modified }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }}{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end }}<black>╶</>"
