update opencode plans and configs

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,10 +11,10 @@
 # italic_font      Sauce Code Pro Italic Nerd Font Complete Mono
 # bold_italic_font Sauce Code Pro Bold Italic Nerd Font Complete Mono
 
-font_family family="MonoLisa _02-23"
+# font_family family="MonoLisa _02-23"
 # font_family FantasqueSansM Nerd Font
 # font_family        FiraCode Nerd Font
-# font_family        JetBrainsMono Nerd Font
+font_family        JetBrainsMono Nerd Font
 # font_family        Mononoki Nerd Font
 # font_family        SauceCodePro Nerd Font
 # font_family        Iosevka Nerd Font
@@ -36,7 +36,7 @@ bold_italic_font   auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14
+font_size 13
 
 #: Font size (in pts)
 
@@ -1028,8 +1028,8 @@ active_tab_title_template "  {title}"
 #: }}}
 
 
-# include /home/rc/.config/kitty/themes/everforest.conf
-include /home/rc/.config/kitty/themes/nord.conf
+include /home/rc/.config/kitty/themes/everforest.conf
+# include /home/rc/.config/kitty/themes/nord.conf
 # include /home/rc/.config/kitty/themes/tokyonight_night.conf
 # include /home/rc/.config/kitty/themes/yoru.conf
 # include /home/rc/.config/kitty/themes/catppuccin-mocha.conf
