--- a/kitty/themes/gruvbox-dark.conf
+++ b/kitty/themes/gruvbox-dark.conf
@@ -1,6 +1,8 @@
 # Based on https://github.com/morhetz/gruvbox by morhetz <morhetz@gmail.com>
 # Adapted to kitty by wdomitrz <witekdomitrz@gmail.com>
 
+background_opacity 0.975
+
 cursor                  #928374
 cursor_text_color       background
 
