--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,12 +1,12 @@
 {
   "$schema": "https://opencode.ai/config.json",
-
-  // ---------------------------------------------------------------------------
-  // 1) Core defaults: model, theme, autoupdate
-  // ---------------------------------------------------------------------------
-
-  // Adaptive theme that matches your terminal.
-  "theme": "system",
+  
+  "mcp": {
+    "exa": {
+      "type": "remote",
+      "url": "https://mcp.exa.ai/mcp?exaApiKey={env:EXA_API_KEY}&tools=web_search_exa,crawling_exa,company_research_exa,get_code_context_exa"
+    }
+  },
 
   // Optional: set once you’ve picked a favorite via /models.
   // "model": "opencode/gpt-5.1-codex",
@@ -19,8 +19,12 @@
   // "ask" will prompt you before executing.
   // Note: "edit" governs *all* file modifications (edit/write/patch/multiedit).
   "permission": {
-    "webfetch": "allow",
-    "websearch": "allow",
+    "webfetch": "deny",
+    "websearch": "deny",
+
+    "web_search_exa": "allow",
+    "crawling_exa": "allow",
+    "get_code_context_exa": "allow",
 
     "question": "allow",
     "todowrite": "allow",
@@ -45,124 +49,6 @@
     // "openai",
     // "gemini"
   ],
-
-  // ---------------------------------------------------------------------------
-  // 5) Keybinds
-  // ---------------------------------------------------------------------------
-  "keybinds": {
-    // ============================================================
-    // Leader key (prefix used by <leader>... bindings)
-    // ============================================================
-    "leader": "ctrl+;",// ============================================================
-    // App / UI chrome
-    // ============================================================
-    "app_exit": "ctrl+c,ctrl+d,<leader>q",
-    "editor_open": "<leader>e",
-    "theme_list": "<leader>t",
-    "sidebar_toggle": "<leader>b",
-    "scrollbar_toggle": "none",
-    "username_toggle": "none",
-    "status_view": "<leader>s",
-    "tool_details": "none",
-    "tips_toggle": "<leader>h",
-    "display_thinking": "none",// ============================================================
-    // Sessions (create/list/timeline/export/interrupt/compact)
-    // ============================================================
-    "session_export": "<leader>x",
-    "session_new": "<leader>n",
-    "session_list": "<leader>l",
-    "session_timeline": "<leader>g",
-    "session_fork": "none",
-    "session_rename": "none",
-    "session_share": "none",
-    "session_unshare": "none",
-    "session_interrupt": "escape",
-    "session_compact": "<leader>c",
-    "session_child_cycle": "<leader>right",
-    "session_child_cycle_reverse": "<leader>left",
-    "session_parent": "<leader>up",// ============================================================
-    // Messages (navigation, copy, undo/redo, conceal)
-    // ============================================================
-    "messages_page_up": "pageup,ctrl+alt+b",
-    "messages_page_down": "pagedown,ctrl+alt+f",
-    "messages_line_up": "ctrl+alt+y",
-    "messages_line_down": "ctrl+alt+e",
-    "messages_half_page_up": "ctrl+alt+u",
-    "messages_half_page_down": "ctrl+alt+d",
-    "messages_first": "ctrl+g,home",
-    "messages_last": "ctrl+alt+g,end",
-    "messages_next": "none",
-    "messages_previous": "none",
-    "messages_copy": "<leader>y",
-    "messages_undo": "<leader>u",
-    "messages_redo": "<leader>r",
-    "messages_last_user": "none",
-    "messages_toggle_conceal": "<leader>h",// ============================================================
-    // Models / variants
-    // ============================================================
-    "model_list": "<leader>m",
-    "model_cycle_recent": "f2",
-    "model_cycle_recent_reverse": "shift+f2",
-    "model_cycle_favorite": "none",
-    "model_cycle_favorite_reverse": "none",
-    "variant_cycle": "ctrl+t",// ============================================================
-    // Commands / agents
-    // ============================================================
-    "command_list": "ctrl+p",
-    "agent_list": "<leader>a",
-    "agent_cycle": "tab",
-    "agent_cycle_reverse": "shift+tab",// ============================================================
-    // Prompt input editor (movement, selection, deletion, submit)
-    // ============================================================
-    // Requested behavior:
-    // - Enter inserts a newline (and ONLY Enter)
-    // - Only Ctrl+Enter submits
-    "input_clear": "ctrl+c",
-    "input_paste": "ctrl+v",
-    "input_submit": "ctrl+return",
-    "input_newline": "return",
-    "input_move_left": "left,ctrl+b",
-    "input_move_right": "right,ctrl+f",
-    "input_move_up": "up",
-    "input_move_down": "down",
-    "input_select_left": "shift+left",
-    "input_select_right": "shift+right",
-    "input_select_up": "shift+up",
-    "input_select_down": "shift+down",
-    "input_line_home": "ctrl+a",
-    "input_line_end": "ctrl+e",
-    "input_select_line_home": "ctrl+shift+a",
-    "input_select_line_end": "ctrl+shift+e",
-    "input_visual_line_home": "alt+a",
-    "input_visual_line_end": "alt+e",
-    "input_select_visual_line_home": "alt+shift+a",
-    "input_select_visual_line_end": "alt+shift+e",
-    "input_buffer_home": "home",
-    "input_buffer_end": "end",
-    "input_select_buffer_home": "shift+home",
-    "input_select_buffer_end": "shift+end",
-    "input_delete_line": "ctrl+shift+d",
-    "input_delete_to_line_end": "ctrl+k",
-    "input_delete_to_line_start": "ctrl+u",
-    "input_backspace": "backspace,shift+backspace",
-    "input_delete": "ctrl+d,delete,shift+delete",
-    "input_undo": "ctrl+-,super+z",
-    "input_redo": "ctrl+.,super+shift+z",
-    "input_word_forward": "alt+f,alt+right,ctrl+right",
-    "input_word_backward": "alt+b,alt+left,ctrl+left",
-    "input_select_word_forward": "alt+shift+f,alt+shift+right",
-    "input_select_word_backward": "alt+shift+b,alt+shift+left",
-    "input_delete_word_forward": "alt+d,alt+delete,ctrl+delete",
-    "input_delete_word_backward": "ctrl+w,ctrl+backspace,alt+backspace",// ============================================================
-    // Input history (previous/next prompt)
-    // ============================================================
-    "history_previous": "up",
-    "history_next": "down",// ============================================================
-    // Terminal integration
-    // ============================================================
-    "terminal_suspend": "ctrl+z",
-    "terminal_title_toggle": "none"
-    },
 
   // ---------------------------------------------------------------------------
   // 6) Agents
